src/ua/nure/lnu2020/ofp_4dv507/pashaieva_shevchenko/parsing/OfpPashaievaShevchenkoParser.java
// Generated from ./OfpPashaievaShevchenko.g4 by ANTLR 4.8

package ua.nure.lnu2020.ofp_4dv507.pashaieva_shevchenko.parsing;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class OfpPashaievaShevchenkoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, COMMENT=2, NEW=3, LENGTH=4, COMMA=5, ASSIGN=6, EQ=7, GT=8, LT=9, 
		PLUS=10, MINUS=11, MULT=12, DIV=13, LCB=14, RCB=15, LRB=16, RRB=17, LSB=18, 
		RSB=19, DT_INT_ARR=20, DT_FLOAT_ARR=21, DT_CHAR_ARR=22, DT_BOOL=23, DT_STR=24, 
		DT_INT=25, DT_FLOAT=26, DT_CHAR=27, RETURN=28, IF=29, ELSE=30, WHILE=31, 
		VOID=32, MAIN=33, PRINT=34, PRINTLN=35, TRUE=36, FALSE=37, POSITIVE_FLOAT=38, 
		FLOAT_ZERO=39, POSITIVE_INT=40, INT_ZERO=41, STRING=42, QUOTED_CHAR=43, 
		ID=44, CHAR=45, SC=46;
	public static final int
		RULE_programDef = 0, RULE_mainDef = 1, RULE_anyFuncDef = 2, RULE_funcDef = 3, 
		RULE_voidFuncDef = 4, RULE_funcArgs = 5, RULE_datatype = 6, RULE_varDef = 7, 
		RULE_ifDef = 8, RULE_voidIfDef = 9, RULE_whileDef = 10, RULE_voidWhileDef = 11, 
		RULE_statOrBlock = 12, RULE_voidStatOrBlock = 13, RULE_block = 14, RULE_funcBlock = 15, 
		RULE_voidBlock = 16, RULE_stat = 17, RULE_voidStat = 18, RULE_scStat = 19, 
		RULE_voidScStat = 20, RULE_voidScStatValue = 21, RULE_assign = 22, RULE_arrSet = 23, 
		RULE_complexExpr = 24, RULE_arrGet = 25, RULE_funcCall = 26, RULE_returnExpr = 27, 
		RULE_expr = 28, RULE_printExpr = 29, RULE_printlnExpr = 30, RULE_printable = 31, 
		RULE_intDecl = 32, RULE_floatDecl = 33, RULE_charDecl = 34, RULE_boolDecl = 35, 
		RULE_strDecl = 36, RULE_intArrDecl = 37, RULE_floatArrDecl = 38, RULE_charArrDecl = 39, 
		RULE_intDef = 40, RULE_floatDef = 41, RULE_charDef = 42, RULE_boolDef = 43, 
		RULE_strDef = 44, RULE_intArrDef = 45, RULE_floatArrDef = 46, RULE_charArrDef = 47, 
		RULE_intArrExpr = 48, RULE_floatArrExpr = 49, RULE_charArrExpr = 50, RULE_intArr = 51, 
		RULE_floatArr = 52, RULE_charArr = 53, RULE_newIntArr = 54, RULE_newFloatArr = 55, 
		RULE_newCharArr = 56, RULE_lengthRead = 57, RULE_boolExpr = 58, RULE_intExpr = 59, 
		RULE_floatExpr = 60, RULE_charExpr = 61, RULE_strExpr = 62, RULE_intLiteral = 63, 
		RULE_floatLiteral = 64, RULE_variable = 65;
	private static String[] makeRuleNames() {
		return new String[] {
			"programDef", "mainDef", "anyFuncDef", "funcDef", "voidFuncDef", "funcArgs", 
			"datatype", "varDef", "ifDef", "voidIfDef", "whileDef", "voidWhileDef", 
			"statOrBlock", "voidStatOrBlock", "block", "funcBlock", "voidBlock", 
			"stat", "voidStat", "scStat", "voidScStat", "voidScStatValue", "assign", 
			"arrSet", "complexExpr", "arrGet", "funcCall", "returnExpr", "expr", 
			"printExpr", "printlnExpr", "printable", "intDecl", "floatDecl", "charDecl", 
			"boolDecl", "strDecl", "intArrDecl", "floatArrDecl", "charArrDecl", "intDef", 
			"floatDef", "charDef", "boolDef", "strDef", "intArrDef", "floatArrDef", 
			"charArrDef", "intArrExpr", "floatArrExpr", "charArrExpr", "intArr", 
			"floatArr", "charArr", "newIntArr", "newFloatArr", "newCharArr", "lengthRead", 
			"boolExpr", "intExpr", "floatExpr", "charExpr", "strExpr", "intLiteral", 
			"floatLiteral", "variable"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'new'", "'.length'", "','", "'='", "'=='", "'>'", 
			"'<'", "'+'", "'-'", "'*'", "'/'", "'{'", "'}'", "'('", "')'", "'['", 
			"']'", null, null, null, "'bool'", "'string'", "'int'", "'float'", "'char'", 
			"'return'", "'if'", "'else'", "'while'", "'void'", "'main'", "'print'", 
			"'println'", "'true'", "'false'", null, null, null, "'0'", null, null, 
			null, null, "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "COMMENT", "NEW", "LENGTH", "COMMA", "ASSIGN", "EQ", "GT", 
			"LT", "PLUS", "MINUS", "MULT", "DIV", "LCB", "RCB", "LRB", "RRB", "LSB", 
			"RSB", "DT_INT_ARR", "DT_FLOAT_ARR", "DT_CHAR_ARR", "DT_BOOL", "DT_STR", 
			"DT_INT", "DT_FLOAT", "DT_CHAR", "RETURN", "IF", "ELSE", "WHILE", "VOID", 
			"MAIN", "PRINT", "PRINTLN", "TRUE", "FALSE", "POSITIVE_FLOAT", "FLOAT_ZERO", 
			"POSITIVE_INT", "INT_ZERO", "STRING", "QUOTED_CHAR", "ID", "CHAR", "SC"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "OfpPashaievaShevchenko.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public OfpPashaievaShevchenkoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramDefContext extends ParserRuleContext {
		public MainDefContext mainDef() {
			return getRuleContext(MainDefContext.class,0);
		}
		public TerminalNode EOF() { return getToken(OfpPashaievaShevchenkoParser.EOF, 0); }
		public List<AnyFuncDefContext> anyFuncDef() {
			return getRuleContexts(AnyFuncDefContext.class);
		}
		public AnyFuncDefContext anyFuncDef(int i) {
			return getRuleContext(AnyFuncDefContext.class,i);
		}
		public ProgramDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OfpPashaievaShevchenkoListener ) ((OfpPashaievaShevchenkoListener)listener).enterProgramDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OfpPashaievaShevchenkoListener ) ((OfpPashaievaShevchenkoListener)listener).exitProgramDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OfpPashaievaShevchenkoVisitor ) return ((OfpPashaievaShevchenkoVisitor<? extends T>)visitor).visitProgramDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramDefContext programDef() throws RecognitionException {
		ProgramDefContext _localctx = new ProgramDefContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programDef);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(132);
					anyFuncDef();
					}
					} 
				}
				setState(137);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(138);
			mainDef();
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DT_INT_ARR) | (1L << DT_FLOAT_ARR) | (1L << DT_CHAR_ARR) | (1L << DT_BOOL) | (1L << DT_STR) | (1L << DT_INT) | (1L << DT_FLOAT) | (1L << DT_CHAR) | (1L << VOID))) != 0)) {
				{
				{
				setState(139);
				anyFuncDef();
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(145);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainDefContext extends ParserRuleContext {
		public TerminalNode VOID() { return getToken(OfpPashaievaShevchenkoParser.VOID, 0); }
		public TerminalNode MAIN() { return getToken(OfpPashaievaShevchenkoParser.MAIN, 0); }
		public TerminalNode LRB() { return getToken(OfpPashaievaShevchenkoParser.LRB, 0); }
		public TerminalNode RRB() { return getToken(OfpPashaievaShevchenkoParser.RRB, 0); }
		public VoidBlockContext voidBlock() {
			return getRuleContext(VoidBlockContext.class,0);
		}
		public MainDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OfpPashaievaShevchenkoListener ) ((OfpPashaievaShevchenkoListener)listener).enterMainDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OfpPashaievaShevchenkoListener ) ((OfpPashaievaShevchenkoListener)listener).exitMainDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OfpPashaievaShevchenkoVisitor ) return ((OfpPashaievaShevchenkoVisitor<? extends T>)visitor).visitMainDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainDefContext mainDef() throws RecognitionException {
		MainDefContext _localctx = new MainDefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(VOID);
			setState(148);
			match(MAIN);
			setState(149);
			match(LRB);
			setState(150);
			match(RRB);
			setState(151);
			voidBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnyFuncDefContext extends ParserRuleContext {
		public VoidFuncDefContext voidFuncDef() {
			return getRuleContext(VoidFuncDefContext.class,0);
		}
		public FuncDefContext funcDef() {
			return getRuleContext(FuncDefContext.class,0);
		}
		public AnyFuncDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anyFuncDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OfpPashaievaShevchenkoListener ) ((OfpPashaievaShevchenkoListener)listener).enterAnyFuncDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OfpPashaievaShevchenkoListener ) ((OfpPashaievaShevchenkoListener)listener).exitAnyFuncDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OfpPashaievaShevchenkoVisitor ) return ((OfpPashaievaShevchenkoVisitor<? extends T>)visitor).visitAnyFuncDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnyFuncDefContext anyFuncDef() throws RecognitionException {
		AnyFuncDefContext _localctx = new AnyFuncDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_anyFuncDef);
		try {
			setState(155);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VOID:
				enterOuterAlt(_localctx, 1);
				{
				setState(153);
				voidFuncDef();
				}
				break;
			case DT_INT_ARR:
			case DT_FLOAT_ARR:
			case DT_CHAR_ARR:
			case DT_BOOL:
			case DT_STR:
			case DT_INT:
			case DT_FLOAT:
			case DT_CHAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(154);
				funcDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncDefContext extends ParserRuleContext {
		public DatatypeContext datatype() {
			return getRuleContext(DatatypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(OfpPashaievaShevchenkoParser.ID, 0); }
		public FuncArgsContext funcArgs() {
			return getRuleContext(FuncArgsContext.class,0);
		}
		public FuncBlockContext funcBlock() {
			return getRuleContext(FuncBlockContext.class,0);
		}
		public FuncDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OfpPashaievaShevchenkoListener ) ((OfpPashaievaShevchenkoListener)listener).enterFuncDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OfpPashaievaShevchenkoListener ) ((OfpPashaievaShevchenkoListener)listener).exitFuncDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OfpPashaievaShevchenkoVisitor ) return ((OfpPashaievaShevchenkoVisitor<? extends T>)visitor).visitFuncDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncDefContext funcDef() throws RecognitionException {
		FuncDefContext _localctx = new FuncDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funcDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			datatype();
			setState(158);
			match(ID);
			setState(159);
			funcArgs();
			setState(160);
			funcBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VoidFuncDefContext extends ParserRuleContext {
		public TerminalNode VOID() { return getToken(OfpPashaievaShevchenkoParser.VOID, 0); }
		public TerminalNode ID() { return getToken(OfpPashaievaShevchenkoParser.ID, 0); }
		public FuncArgsContext funcArgs() {
			return getRuleContext(FuncArgsContext.class,0);
		}
		public VoidBlockContext voidBlock() {
			return getRuleContext(VoidBlockContext.class,0);
		}
		public VoidFuncDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_voidFuncDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OfpPashaievaShevchenkoListener ) ((OfpPashaievaShevchenkoListener)listener).enterVoidFuncDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OfpPashaievaShevchenkoListener ) ((OfpPashaievaShevchenkoListener)listener).exitVoidFuncDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OfpPashaievaShevchenkoVisitor ) return ((OfpPashaievaShevchenkoVisitor<? extends T>)visitor).visitVoidFuncDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VoidFuncDefContext voidFuncDef() throws RecognitionException {
		VoidFuncDefContext _localctx = new VoidFuncDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_voidFuncDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(VOID);
			setState(163);
			match(ID);
			setState(164);
			funcArgs();
			setState(165);
			voidBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncArgsContext extends ParserRuleContext {
		public TerminalNode LRB() { return getToken(OfpPashaievaShevchenkoParser.LRB, 0); }
		public TerminalNode RRB() { return getToken(OfpPashaievaShevchenkoParser.RRB, 0); }
		public List<VarDefContext> varDef() {
			return getRuleContexts(VarDefContext.class);
		}
		public VarDefContext varDef(int i) {
			return getRuleContext(VarDefContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(OfpPashaievaShevchenkoParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(OfpPashaievaShevchenkoParser.COMMA, i);
		}
		public FuncArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcArgs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OfpPashaievaShevchenkoListener ) ((OfpPashaievaShevchenkoListener)listener).enterFuncArgs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OfpPashaievaShevchenkoListener ) ((OfpPashaievaShevchenkoListener)listener).exitFuncArgs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OfpPashaievaShevchenkoVisitor ) return ((OfpPashaievaShevchenkoVisitor<? extends T>)visitor).visitFuncArgs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncArgsContext funcArgs() throws RecognitionException {
		FuncArgsContext _localctx = new FuncArgsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcArgs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(LRB);
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DT_INT_ARR) | (1L << DT_FLOAT_ARR) | (1L << DT_CHAR_ARR) | (1L << DT_BOOL) | (1L << DT_STR) | (1L << DT_INT) | (1L << DT_FLOAT) | (1L << DT_CHAR))) != 0)) {
				{
				setState(168);
				varDef();
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(169);
					match(COMMA);
					setState(170);
					varDef();
					}
					}
					setState(175);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(178);
			match(RRB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DatatypeContext extends ParserRuleContext {
		public TerminalNode DT_INT() { return getToken(OfpPashaievaShevchenkoParser.DT_INT, 0); }
		public TerminalNode DT_FLOAT() { return getToken(OfpPashaievaShevchenkoParser.DT_FLOAT, 0); }
		public TerminalNode DT_CHAR() { return getToken(OfpPashaievaShevchenkoParser.DT_CHAR, 0); }
		public TerminalNode DT_BOOL() { return getToken(OfpPashaievaShevchenkoParser.DT_BOOL, 0); }
		public TerminalNode DT_STR() { return getToken(OfpPashaievaShevchenkoParser.DT_STR, 0); }
		public TerminalNode DT_INT_ARR() { return getToken(OfpPashaievaShevchenkoParser.DT_INT_ARR, 0); }
		public TerminalNode DT_FLOAT_ARR() { return getToken(OfpPashaievaShevchenkoParser.DT_FLOAT_ARR, 0); }
		public TerminalNode DT_CHAR_ARR() { return getToken(OfpPashaievaShevchenkoParser.DT_CHAR_ARR, 0); }
		public DatatypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_datatype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OfpPashaievaShevchenkoListener ) ((OfpPashaievaShevchenkoListener)listener).enterDatatype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OfpPashaievaShevchenkoListener ) ((OfpPashaievaShevchenkoListener)listener).exitDatatype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OfpPashaievaShevchenkoVisitor ) return ((OfpPashaievaShevchenkoVisitor<? extends T>)visitor).visitDatatype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DatatypeContext datatype() throws RecognitionException {
		DatatypeContext _localctx = new DatatypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_datatype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DT_INT_ARR) | (1L << DT_FLOAT_ARR) | (1L << DT_CHAR_ARR) | (1L << DT_BOOL) | (1L << DT_STR) | (1L << DT_INT) | (1L << DT_FLOAT) | (1L << DT_CHAR))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDefContext extends ParserRuleContext {
		public IntDefContext intDef() {
			return getRuleContext(IntDefContext.class,0);
		}
		public FloatDefContext floatDef() {
			return getRuleContext(FloatDefContext.class,0);
		}
		public CharDefContext charDef() {
			return getRuleContext(CharDefContext.class,0);
		}
		public BoolDefContext boolDef() {
			return getRuleContext(BoolDefContext.class,0);
		}
		public StrDefContext strDef() {
			return getRuleContext(StrDefContext.class,0);
		}
		public IntArrDefContext intArrDef() {
			return getRuleContext(IntArrDefContext.class,0);
		}
		public FloatArrDefContext floatArrDef() {
			return getRuleContext(FloatArrDefContext.class,0);
		}
		public CharArrDefContext charArrDef() {
			return getRuleContext(CharArrDefContext.class,0);
		}
		public VarDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OfpPashaievaShevchenkoListener ) ((OfpPashaievaShevchenkoListener)listener).enterVarDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OfpPashaievaShevchenkoListener ) ((OfpPashaievaShevchenkoListener)listener).exitVarDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OfpPashaievaShevchenkoVisitor ) return ((OfpPashaievaShevchenkoVisitor<? extends T>)visitor).visitVarDef(this);
			else return visitor.visitChildren(this);
		}
	}
